@@ -14,6 +14,7 @@
   (Andrey)
 - Improved support for is_link and related functions on Windows. (Pierre)
 
+- Implemented FR #52348, Ability to detect zend multibyte at runtime. (Kalle)
 - Implemented FR #52173, added functions pcntl_get_last_error() and 
   pcntl_strerror(). (nick dot telford at gmail dot com, Arnaud)
 - Implemented symbolic links support for open_basedir checks. (Pierre)
